--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost/app
-spring.datasource.username=root
-spring.datasource.password=
+app.datasource.jdbcUrl=jdbc:mysql://localhost/app
+app.datasource.username=root
+app.datasource.password=
+
+auth.datasource.jdbcUrl=jdbc:mysql://localhost/auth
+auth.datasource.username=root
+auth.datasource.password=
 
